--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,37 @@
 </head>
 <script src="https://unpkg.com/feather-icons"></script>
 <body>
+
+
+    <!-- MAIN PAGE -->
+
+    <div class="bg-gray-100 font-ubuntu flex">
+
+        <!-- SIDE BAR -->
+        <aside class="bg-white h-screen shadow-md fixed px-12 pt-16 font-thin text-center text-gray-600 max-w-sm overflow-hidden">
+            <h1 class="text-4xl tracking-widest">DOTOKO</h1>
+            <h2 class="text-xl mt-5 tracking-widest">A simple solution for your note making.</h2>
+            
+            <!-- NAV LINKS -->
+
+            <ul class="text-xl mt-12">
+                <li class="cursor-pointer mb-8 hover:underline">
+                    About
+                </li>
+                <li class=" text-secondary cursor-pointer mb-8 hover:underline">
+                    Delete all notes
+                </li>
+            </ul>
+            <img class="fixed w-72 left-24 bottom-0"  src="images/flower.svg" alt=" flower illustration">        
+        </aside>
+        
+        <!-- NOTEMAKING SECTION -->
+
+        <div class="">
+
+
+        </div>
+    </div>
     <script>feather.replace();</script>
     <script src="script.js"></script>
 </body>
