basic styles and formatting

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,153 @@
                 </form>
                 <i data-feather="plus" stroke-width="1" color="#4B5563" width="45" height="45" class=" cursor-pointer"></i>     
             </div>
+
+            <!-- NOTES GRID -->
+
+            <div class="flex justify-center gap-14 mt-24 ml-10">
+                <ul class="w-5/12 flex-row space-y-14">
+
+                    <!-- CARDS LIST -->
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>This is a sample note. You should probably delete it or else save for my memory how about that?</p>
+                        </div>
+                    </li>
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+                
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+
+                </ul>
+
+
+                <ul class="w-5/12 flex-row space-y-14">
+
+                    <!-- CARDS LIST -->
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>This is a sample note. You should probably delete it or else save for my memory how about that?</p>
+                        </div>
+                    </li>
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+                
+                    <li class="">
+                        <div class="bg-primary rounded  p-8">
+                            <div class="mb-4 flex justify-between items-center">
+                                <div class="flex items-center">
+                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
+                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                                </div>
+                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
+                            </div>    
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
         </div>
     </div>
     <script>feather.replace();</script>
