Finished HTML and CSS

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         <!-- NOTEMAKING SECTION -->
 
-        <div class="h-screen bg-gray-100 ml-96 mr-10">
+        <div class="bg-gray-100 ml-96 mr-10 mb-32">
             <div class="flex justify-between pt-16">
                 <form action="#" class=" -ml-2">
                     <input type="text" name="searchbox" class="bg-primary border-2 border-transparent h-12 rounded text-right pr-14 text-3xl font-thin text-gray-500 outline-none focus:border-gray-400" placeholder="Search">
@@ -45,13 +45,13 @@
 
             <!-- NOTES GRID -->
 
-            <div class="flex justify-center gap-14 mt-24 ml-10">
-                <ul class="w-5/12 flex-row space-y-14">
+            <div class="mt-24 ml-10">
+
+                <ul class="flex flex-r flex-wrap gap-10">
 
                     <!-- CARDS LIST -->
-
-                    <li class="">
-                        <div class="bg-primary rounded  p-8">
+                    <div class="min-w-half flex-1 bg-primary rounded  p-8">
+                        <li>
                             <div class="mb-4 flex justify-between items-center">
                                 <div class="flex items-center">
                                     <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
@@ -60,11 +60,11 @@
                                 <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
                             </div>    
                             <p>This is a sample note. You should probably delete it or else save for my memory how about that?</p>
-                        </div>
-                    </li>
+                        </li>
+                    </div>
 
-                    <li class="">
-                        <div class="bg-primary rounded  p-8">
+                    <div class="min-w-half flex-1 bg-primary rounded  p-8">
+                        <li>
                             <div class="mb-4 flex justify-between items-center">
                                 <div class="flex items-center">
                                     <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
@@ -72,11 +72,11 @@
                                 </div>
                                 <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
                             </div>    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                        </div>
-                    </li>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, m dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua m dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua henderit in m dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim v voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </li>
+                    </div>    
 
-                    <li class="">
+                    <li class="min-w-half flex-1">
                         <div class="bg-primary rounded  p-8">
                             <div class="mb-4 flex justify-between items-center">
                                 <div class="flex items-center">
@@ -89,7 +89,7 @@
                         </div>
                     </li>
 
-                    <li class="">
+                    <li class="min-w-half flex-1">
                         <div class="bg-primary rounded  p-8">
                             <div class="mb-4 flex justify-between items-center">
                                 <div class="flex items-center">
@@ -102,7 +102,7 @@
                         </div>
                     </li>
                 
-                    <li class="">
+                    <li class="min-w-half flex-1">
                         <div class="bg-primary rounded  p-8">
                             <div class="mb-4 flex justify-between items-center">
                                 <div class="flex items-center">
@@ -114,15 +114,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         </div>
                     </li>
-
-                </ul>
-
-
-                <ul class="w-5/12 flex-row space-y-14">
-
-                    <!-- CARDS LIST -->
-
-                    <li class="">
+                    <li class="min-w-half flex-1">
                         <div class="bg-primary rounded  p-8">
                             <div class="mb-4 flex justify-between items-center">
                                 <div class="flex items-center">
@@ -131,64 +123,30 @@
                                 </div>
                                 <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
                             </div>    
-                            <p>This is a sample note. You should probably delete it or else save for my memory how about that?</p>
-                        </div>
-                    </li>
-
-                    <li class="">
-                        <div class="bg-primary rounded  p-8">
-                            <div class="mb-4 flex justify-between items-center">
-                                <div class="flex items-center">
-                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
-                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                                </div>
-                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                            </div>    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                        </div>
-                    </li>
-
-                    <li class="">
-                        <div class="bg-primary rounded  p-8">
-                            <div class="mb-4 flex justify-between items-center">
-                                <div class="flex items-center">
-                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
-                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                                </div>
-                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                            </div>    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                        </div>
-                    </li>
-
-                    <li class="">
-                        <div class="bg-primary rounded  p-8">
-                            <div class="mb-4 flex justify-between items-center">
-                                <div class="flex items-center">
-                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
-                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                                </div>
-                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                            </div>    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                        </div>
-                    </li>
-                
-                    <li class="">
-                        <div class="bg-primary rounded  p-8">
-                            <div class="mb-4 flex justify-between items-center">
-                                <div class="flex items-center">
-                                    <h3 class=" text-gray-600 text-2xl font-medium ">Title of the Note</h3>
-                                    <i data-feather="check-square" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                                </div>
-                                <i data-feather="trash" stroke-width="1" color="black" width="25" height="25" class=" cursor-pointer inline ml-3 opacity-60 hover:opacity-90"></i>
-                            </div>    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p>Lorem ipsum dolor sit amet, cat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         </div>
                     </li>
 
                 </ul>
             </div>
+
+                  <!-- ADD NOTE OVERLAY -->
+
+            <div class="hidden fixed flex justify-center items-center top-0 bg-gray-900 bg-opacity-70 z-50 w-screen h-screen">
+                <div class="bg-primary w-1/2 h-1/2 -ml-96 rounded p-6 shadow-lg">
+                    <form action="#" class="h-full pb-10">
+                        <div class="flex justify-end gap-10 mb-4">
+                            <i data-feather="check" stroke-width="1" color="black" width="40" height="25" class=" cursor-pointer inline opacity-60 hover:opacity-90"></i>
+                            <i data-feather="x" stroke-width="1" color="black" width="40" height="25" class=" cursor-pointer inline opacity-60 hover:opacity-90"></i>
+                        </div>                    
+                        <div class="h-full pb-20">
+                            <input type="text" name="titlebox" class="bg-white border-2 border-transparent w-full h-12 rounded pl-4 mb-4 font-light text-gray-500 outline-none focus:border-gray-400" placeholder="Title">
+                            <textarea name="notes" class=" p-4 resize-none bg-white border-2 border-transparent w-full h-full rounded font-thin text-gray-500 outline-none focus:border-gray-400" placeholder="Your note goes here !"></textarea>    
+                        </div>
+                    </form>
+                </div>
+            </div>
+
         </div>
     </div>
     <script>feather.replace();</script>
